# gerentes_publicos

./: .env.example  .gitignore  README.md  auth.py  config.py  database.py  main.py  pyproject.toml  routes.py  schemas.py
app/: main.py
app/core/: config.py
