[project]
name = "gerentes-publicos"
version = "0.1.0"
description = "API para gestión de compromisos y acciones"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "psycopg[binary]==3.1.12",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "httpx==0.25.2",
    "pytest-asyncio==0.21.1",
]