[project]
name = "gerentes-publicos-api"
version = "1.0.0"
description = "API para gestión de compromisos y acciones"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "psycopg[binary]==3.1.12",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
]
